--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -13,12 +13,12 @@
         android:orientation="horizontal">
 
         <TextView
-            android:layout_margin="5dp"
             android:layout_width="125dp"
-            android:textSize="20sp"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:text="@string/item_name"
-            android:textStyle="bold"/>
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -27,12 +27,12 @@
             android:orientation="vertical">
 
             <EditText
-                android:textSize="20sp"
                 android:id="@+id/edit_item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_item_name"
-                android:inputType="textCapWords" />
+                android:inputType="textCapWords"
+                android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -43,10 +43,10 @@
         android:orientation="horizontal">
 
         <TextView
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
-            android:text="@string/category_description"
             android:layout_margin="5dp"
-            android:layout_width="125dp"/>
+            android:text="@string/category_description" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -70,10 +70,10 @@
         android:orientation="horizontal">
 
         <TextView
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
-            android:text="@string/category_quantity"
             android:layout_margin="5dp"
-            android:layout_width="125dp"/>
+            android:text="@string/category_quantity" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -89,11 +89,11 @@
 
             <EditText
                 android:id="@+id/quantity"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"/>
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:inputType="number" />
 
             <Button
                 android:id="@+id/quantity_plus"
@@ -110,9 +110,9 @@
         android:orientation="horizontal">
 
         <TextView
-            android:layout_margin="5dp"
             android:layout_width="125dp"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:text="@string/category_price" />
 
         <LinearLayout
@@ -126,7 +126,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_item_price"
-                android:inputType="number"/>
+                android:inputType="number" />
         </LinearLayout>
     </LinearLayout>
 
@@ -137,9 +137,9 @@
         android:orientation="horizontal">
 
         <TextView
-            android:layout_margin="5dp"
             android:layout_width="125dp"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:text="@string/category_image" />
 
         <LinearLayout
@@ -166,19 +166,18 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-    <TextView
-        android:layout_margin="5dp"
-        android:layout_width="125dp"
-        android:layout_height="wrap_content"
-        android:text="@string/order_from_supplier"/>
+        <TextView
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="@string/order_from_supplier" />
 
 
+        <Button
+            android:id="@+id/order_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/order" />
 
-    <Button
-        android:id="@+id/order_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/order" />
-
-</LinearLayout>
+    </LinearLayout>
 </LinearLayout>
