--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,60 +15,60 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <TextView
-            android:textSize="20sp"
-            android:layout_margin="5dp"
-            android:layout_width="125dp"
-            android:layout_height="wrap_content"
-            android:text="@string/item_name"/>
+            <TextView
+                android:layout_width="125dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="@string/item_name"
+                android:textSize="20sp" />
 
-        <TextView
-            android:layout_margin="5dp"
-            android:textSize="20sp"
-            android:id="@+id/product_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/product_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-    </LinearLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <TextView
-            android:layout_margin="5dp"
-            android:layout_width="125dp"
-            android:layout_height="wrap_content"
-            android:text="@string/category_quantity"/>
+            <TextView
+                android:layout_width="125dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="@string/category_quantity" />
 
-        <TextView
-            android:layout_margin="5dp"
-            android:id="@+id/current_quantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/current_quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp" />
 
         </LinearLayout>
 
-            <LinearLayout
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="125dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="@string/category_price" />
+
+            <TextView
+                android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_margin="5dp" />
 
-        <TextView
-            android:layout_margin="5dp"
-            android:layout_width="125dp"
-            android:layout_height="wrap_content"
-            android:text="@string/category_price"/>
-
-        <TextView
-            android:layout_margin="5dp"
-            android:id="@+id/price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
